--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "cryptoflash_icon",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "engines": {
     "node": "14.x"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
